[package]
name = "rust-os"
version = "0.1.0"
authors = ["Aaron Janse <aaron@ajanse.me>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.6.0", features = ["map_physical_memory"]}
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.7.0"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"
linked_list_allocator = "0.6.4"

[package.metadata.bootimage]
test-timeout = 10
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]